# NJU-WinterCode-Skill2048

./: .gitignore  CMakeLists.txt  README.md  run.cmd
data/: leaderboard.txt
include/: GUI.h  GUIDataDisplay.h  GUIEffect.h  Game.h  Leaderboard.h  Rectangle.h  Skill.h
project/: CMakeLists.txt  run.cmd
project/include/: GUI.h  GUIDataDisplay.h  GUIEffect.h  Game.h  Leaderboard.h  Rectangle.h
project/src/: GUI.cpp  GUIEffect.cpp  Game.cpp  Leaderboard.cpp  Rectangle.cpp  Skill.cpp
src/: GUI.cpp  GUIDataDisplay.cpp  GUIEffect.cpp  Game.cpp  Leaderboard.cpp  Rectangle.cpp  Skill.cpp  main.cpp
